--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -205,6 +205,9 @@ a,
     background-color: var(--main-color);
     color: white;
 }
+.home .link a svg{
+    font-size: 50px;
+}
 /* End Halls */
 /* Start Halls Content */
 .halls-content ul li a:hover{
